--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1643,7 +1643,7 @@ post.resource.editGoldStandardBookmark                  = edit this community po
 post.resource.editGoldStandardPublication               = edit this community post
 post.resource.editGroupBookmark                         = edit this group bookmark post
 post.resource.editGroupPost.tags.describe               = tags - describe the post
-post.resource.editGroupPost.warning                     = You are editing the post of another user!
+post.resource.editGroupPost.warning                     = You are editing a group post!
 post.resource.editGroupPublication                      = edit this group publication post
 post.resource.editPublication                           = edit your publication post
 post.resource.edition                                   = edition
