--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1632,7 +1632,7 @@ post.resource.editGoldStandardBookmark                  = Bearbeiten Sie diesen 
 post.resource.editGoldStandardPublication               = Bearbeiten Sie diesen Gemeinschaftseintrag
 post.resource.editGroupBookmark                         = Bearbeiten Sie dieses Gruppenlesezeichen
 post.resource.editGroupPost.tags.describe               = Tags - beschreiben Sie den Post
-post.resource.editGroupPost.warning                     = Sie bearbeiten den Post eines anderen Benutzers!
+post.resource.editGroupPost.warning                     = Sie bearbeiten einen Gruppenpost!
 post.resource.editGroupPublication                      = Bearbeiten Sie diese Gruppenpublikation
 post.resource.editPublication                           = Bearbeiten Sie Ihren Publikationseintrag
 post.resource.edition                                   = Auflage
