--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1862,10 +1862,10 @@ publications = publications
 publications.abstract.headline   = Abstract
 publications.citations.headline  = Cite this publication
 publications.discussion.headline = Comments and Reviews
-publications.related.citing      = publications citing this publication
+publications.related.citing      = Publications Citing this Publication
 publications.related.empty       = no publications found
 publications.related.headline    = Related Publications
-publications.related.referenced  = publications referenced by this publication
+publications.related.referenced  = Publications Referenced by this Publication
 #publications
 publications.resource.headline   = Links and resources
 
