--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -865,7 +865,7 @@ goldStandard.users                      = Benutzer, die diesen Eintrag in ihrer 
 
 goldstandard.resource.info.noAbstract = Bisher wurden keine Zusammenfassung zu diesem Eintrag hinzugef\u00FCgt.
 goldstandard.resource.info.noLinks    = Bisher wurden keine Links zu diesem Eintrag hinzugef\u00FCgt.
-goldstandard.resource.relatedUsers    = Nutzer dieser Resource
+goldstandard.resource.relatedUsers    = Nutzer
 
 goto.first    = Zur ersten Seite wechseln
 goto.last     = Zur letzten Seite wechseln
@@ -1849,10 +1849,10 @@ publications = Publikationen
 publications.abstract.headline   = Zusammenfassung
 publications.citations.headline  = Zitieren Sie diese Publikation
 publications.discussion.headline = Kommentare und Rezensionen
-publications.related.citing      = Publikationen, die diese Publikation zitieren
+publications.related.citing      = Zitierende Publikationen
 publications.related.empty       = keine Publikationen gefunden
 publications.related.headline    = Verwandte Publikationen
-publications.related.referenced  = Publikationen, die von dieser Publikation referenziert werden
+publications.related.referenced  = Referenzierte Publikationen
 publications.resource.headline   = Links und Ressourcen
 
 qrcode.actions.download                       = ohne QR-Code
