--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -868,7 +868,7 @@ goldStandard.users                      = users having this post in their collec
 
 goldstandard.resource.info.noAbstract = No abstract has been added to this post.
 goldstandard.resource.info.noLinks    = No links have been added to this post.
-goldstandard.resource.relatedUsers    = Users that have this publication in their collection
+goldstandard.resource.relatedUsers    = Users
 
 goto.first    = go to the first page
 goto.last     = go to the last page
@@ -1862,11 +1862,10 @@ publications = publications
 publications.abstract.headline   = Abstract
 publications.citations.headline  = Cite this publication
 publications.discussion.headline = Comments and Reviews
-publications.related.citing      = Publications Citing this Publication
+publications.related.citing      = Citing Publications
 publications.related.empty       = no publications found
 publications.related.headline    = Related Publications
-publications.related.referenced  = Publications Referenced by this Publication
-#publications
+publications.related.referenced  = Referenced Publications
 publications.resource.headline   = Links and resources
 
 qrcode.actions.download                       = without a QR Code
