--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -311,6 +311,7 @@ close = schlie\u00DFen
 
 community = Community
 
+community.bookmark.edit      = Bearbeiten Sie ihr Lesezeichen.
 community.generalinformation = Allgemeine Informationen
 community.page               = Community Seite
 community.warning.edit       = Wenn Sie die Publikation in Ihrer Sammlung bearbeiten wollen, folgen Sie <a href="{0}">diesem Link</a>.
