--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -294,6 +294,7 @@ close = \u0437\u0430\u043A\u0440\u044B\u0442\u044C
 
 community = \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u043E
 
+community.bookmark.edit      = 
 community.generalinformation = 
 community.page               = \u0421\u0442\u0440\u0430\u043D\u0438\u0446\u0430 \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u0430
 community.warning.edit       = 
