fixed wording (replaced disband)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2108,10 +2108,10 @@ settings.group.denyReason                                   = reason
 settings.group.denyReason.help                              = the reason why the user is not allowed to join
 settings.group.description                                  = description
 settings.group.description.help                             = This description will be displayed in the sidebar of the groupsettings
-settings.group.disband                                      = disband group
+settings.group.disband                                      = delete group
 # disband group
 settings.group.disband.InfoText                             = If you delete this group, all group documents will be lost. 
-settings.group.disband.notEmptyInfoText                     = You can disband this group after you removed all other group members.
+settings.group.disband.notEmptyInfoText                     = You can delete this group after you removed all other group members.
 settings.group.disband.yesToDeleteGroup                     = (type {0} to delete this group)
 settings.group.editSettings                                 = edit settings
 settings.group.error.addUserToGroupFailed                   = The user {0} could not be added to the group {1}.
