--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2098,7 +2098,7 @@ settings.group.deny.button.title                            = Antrag ablehnen
 settings.group.denyReason                                   = Grund
 settings.group.denyReason.help                              = Der Grund, weshalb der Benutzer nicht der Gruppe beitreten darf
 settings.group.description.help                             = Dieser Beschreibungstext wird in der Seitenleiste der Gruppenseite angezeigt.
-settings.group.disband                                      = Gruppe aufl\u00F6sen
+settings.group.disband                                      = Gruppe l\u00F6schen
 settings.group.disband.InfoText                             = Wenn Sie diese Gruppe l\u00F6schen, verlieren Sie alle Dokumente, die der Gruppe zugeordnet sind. 
 settings.group.disband.notEmptyInfoText                     = Sie k\u00F6nnen diese Gruppe erst l\u00F6schen, wenn Sie vorher alle anderen Mitglieder aus der Gruppe entfernen.
 settings.group.disband.yesToDeleteGroup                     = (Geben Sie {0} ein, um diese Gruppe zu l\u00F6schen)
