fixed wording (group members overview tab)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -918,7 +918,7 @@ groups.actions.shareDocuments.title   = Share your documents with the group
 groups.actions.unshareDocuments       = unshare
 groups.actions.unshareDocuments.title = Unshare your documents with the group
 groups.documentsharing.disabled       = disabled
-groups.documentsharing.shared         = shared
+groups.documentsharing.shared         = shares documents
 groups.role                           = role
 groups.role.admin                     = administrator
 groups.role.moderator                 = moderator
