--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -915,7 +915,7 @@ groups.actions.shareDocuments.title   = Ihre Dokumente mit dieser Gruppe teilen
 groups.actions.unshareDocuments       = nicht teilen
 groups.actions.unshareDocuments.title = Ihre Dokumente nicht mit dieser Gruppe teilen
 groups.documentsharing.disabled       = deaktiviert
-groups.documentsharing.shared         = geteilt
+groups.documentsharing.shared         = teilt Dokumente
 groups.role                           = Rolle
 groups.role.admin                     = Administrator
 groups.role.moderator                 = Moderator
