--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -93,7 +93,6 @@ batchedit.disregardedPosts.alert   = The inactive posts are those that are not i
 batchedit.disregardedPosts.info    = This post is not your own and therefore you can not edit it.
 batchedit.eachTagOk                = Edit tag(s)
 batchedit.editHint                 = Info: To enable edit options, select an action and at least one post.
-batchedit.hint                     = 
 batchedit.hint.notSavedEdit        = The following (non-erroneous) post(s) are not saved yet. They will be saved after you finished editing them.
 batchedit.hint.savedEdit           = The following (non-erroneous) post(s) are saved. You can now edit them.
 batchedit.info1                    = Here you can edit your posts. Edit options include
@@ -240,7 +239,6 @@ bookmarklet.legacyNotice.further2 = You can find them on the <a href="/buttons">
 bookmarklet.sidebarNotice         = Posting with only one click: Install the useful {0} browser add-on. Its buttons will simplify saving publications and bookmarks and provide a quick link to your my{0} page.
 bookmarklet.titleChrome           = use the {0} browser add-on for Chrome
 bookmarklet.titleFirefox          = Use the {0} browser add-on for Firefox
-bookmarklet.titleSafari           = 
 
 bookmarks = bookmarks
 
@@ -1045,7 +1043,6 @@ login.lostPassword            = lost password
 login.lostPassword_1          = I've lost my password.
 login.lostPassword_2          = Please send me a new one.
 login.method                  = Login method
-login.method.httpbasic        = 
 login.method.internal         = Local
 login.method.ldap             = LDAP
 login.method.openid           = OpenID
@@ -1074,7 +1071,6 @@ mail.activation.body                 = \nWelcome to {1}! Your account activation
 mail.activation.subject              = Your {1} activation was successful!
 mail.group.activation.body           = Hello {0}!\n\nYour group {1} has been created. You can visit its group page under {2} and edit its settings under {3}.\n\nHave fun using {4}!\n\nReplies to this e-mail address are deleted, please send questions to {5}.
 mail.group.activation.subject        = Your group {1} has been created!
-mail.group.decline                   = 
 mail.group.decline.body              = Hello {0}!\n\nYour request for creating the group {1} has been declined.\n\n{2}\n\nReplies to this e-mail address are deleted, please send questions to {4}.
 mail.group.decline.subject           = Your group creation request has been declined!
 mail.groupInvite.body                = \nHello {0}!\n\nUser {1} has invited you to join {2}.\n\nVisit {8}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
@@ -1435,7 +1431,7 @@ persons.intro.genealogy.desc   = &nbsp;
 persons.intro.genealogy.img    = /resources/image/logo_person_genealogy_english.svg
 persons.intro.genealogy.text   = {0} Genealogy creates a genealogy of research at German universities based on user inputs. It is based on the dissertation catalog of the Deutsche Nationalbibliothek (DNB). Users enter linkages between existing dissertations (advisor information etc.) and provide information about missing dissertations.
 persons.intro.head.desc        = A Dissertation-based Genealogy of Research at German Universities
-persons.intro.head.title       = Genealogy
+persons.intro.head.title       = {0} Genealogy
 persons.intro.navi.dataset     = Who Can Participate?
 persons.intro.navi.genealogy   = What Is {0} Genealogy?
 persons.intro.navi.reg         = How Does {0} Genealogy Work?
@@ -2462,7 +2458,6 @@ time.a_year    = a year
 time.an_hour   = an hour
 time.justnow   = just now
 time.postfix   = \ ago
-time.prefix    = 
 time.x_days    = {0} days
 time.x_hours   = {0} hours
 time.x_minutes = {0} minutes
