Renamed property for person disambiguation page.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -436,7 +436,7 @@ didyouknow.scanningQr      = <p>Your webcam can scan the barcodes on your books!
 
 disambiguation.addPersonButton                      = Add person
 disambiguation.close                                = Close
-disambiguation.fromPost                             = From post
+disambiguation.fromPost                             = Author of the publication
 disambiguation.header                               = Disambiguation
 disambiguation.link.modal.abortButton               = Abort
 disambiguation.link.modal.msg                       = Your choice of the person associated to the publication can be saved in our system, so that no other have to make this choice again. Do you want to save your choice?
