--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -435,7 +435,7 @@ didyouknow.scanningQr      = <p>Ihre Webcam kann die Barcodes Ihrer B\u00FCcher 
 
 disambiguation.addPersonButton                      = Person hinzuf\u00FCgen
 disambiguation.close                                = Schlie\u00DFen
-disambiguation.fromPost                             = Von der Publikation
+disambiguation.fromPost                             = Autor der Publikation
 disambiguation.header                               = Disambiguierung
 disambiguation.link.modal.abortButton               = Abbrechen
 disambiguation.link.modal.msg                       = Ihre Entscheidung \u00FCber die Person, die mit der Publikation assoziiert werden soll, kann in unserem System gespeichert werden, sodass andere Benutzer diese Entscheidung nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Entscheidung speichern?
