--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2447,6 +2447,7 @@ time.a_month   = einem Monat
 time.a_year    = einem Jahr
 time.an_hour   = einer Stunde
 time.justnow   = gerade eben
+time.postfix   = 
 time.prefix    = vor 
 time.x_days    = {0} Tagen
 time.x_hours   = {0} Stunden
