--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2459,6 +2459,7 @@ time.a_year    = a year
 time.an_hour   = an hour
 time.justnow   = just now
 time.postfix   = \ ago
+time.prefix    = 
 time.x_days    = {0} days
 time.x_hours   = {0} hours
 time.x_minutes = {0} minutes
