add possibility to delete a group from the admin interface, fixing #2616

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2084,6 +2084,7 @@ settings.group.delUser.button.title                         = Diesen Nutzer aus 
 settings.group.delUser.help                                 = Der Name des Benutzers, der aus der Gruppe ausgeschlossen werden soll
 settings.group.delUser.noUser                               = Die Gruppe hat derzeit noch keine Mitglieder.
 settings.group.delete                                       = Gruppe l\u00F6schen
+settings.group.delete.description                           = Geben Sie den Namen der Gruppe ein, die gel\u00F6scht werden soll. Alle Mitglieder dieser Gruppe werden aus ihr entfernt. Danach wird die Gruppe gel\u00F6scht.
 settings.group.deleteRequest                                = Anfrage l\u00F6schen
 settings.group.deleteRequest.title                          = L\u00F6scht die Anfrage zur Gruppenerstellung
 settings.group.deny                                         = Mitgliedschaftsantrag des Benutzers {0} ablehnen
