--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -704,6 +704,7 @@ error.url.exists                             = The URL has already been added.
 error.url.exists_not                         = The given URL does not exist.
 error.url.format                             = Wrong URL format. Missing protocol?
 error.url.general                            = Theres something wrong with the URL.
+error.url.too_long                           = The given URL is too long.
 error.url_no_hash                            = Sorry, this page does not exist on our server. If you want to access a viewable page, please specify a BibTeX key like /url/HASH.
 error.user.no_valid_username                 = Please enter a valid Username.
 error.user.none_existing_user                = The User with the Name {0} doesn't exist in our system.
