--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -701,6 +701,7 @@ error.url.exists                             = Die angegebene URL wurde dem Eint
 error.url.exists_not                         = Die angegebene URL existiert nicht.
 error.url.format                             = Die URL ist falsch formatiert. M\u00F6glicherweise fehlt das Protokoll.
 error.url.general                            = Etwas ist falsch an der URL.
+error.url.too_long                           = Die angegebene URL ist zu lang.
 error.url_no_hash                            = Diese Seite existiert leider nicht auf unserem Server. Um auf eine Seite mit URL-Eintr\u00E4gen zuzugreifen, verwenden Sie bitte das URL-Schema /url/HASH.
 error.user.no_valid_username                 = Bitte geben Sie einen g\u00FCltigen Benutzernamen ein.
 error.user.none_existing_user                = Der Benutzer mit dem Namen {0} existiert nicht in unserem System.
