--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -432,7 +432,7 @@ didyouknow = Did you know \u2026
 didyouknow.browserButtons  = Our browser add-ons help you to collect bookmarks and publications. <a href="/buttons">Read more.</a>
 didyouknow.editYourProfile = It is much easier for your colleagues to find you, if you have filled out your research profile. <a href="/settings">Edit my profile.</a>
 didyouknow.isbn            = In order to save a book, a journal, or a magazine in your publication list, you can <a href="/postPublication?selTab=3#selTab3">insert easily</a> a unique identifier like an ISBN, an ISSN, or a DOI. It searches for the other metadata self-acting and transmits these into your post input form. This saves time and nerves.
-didyouknow.scanningQr      = <p>Your webcam can scan the barcodes on your books!</p><p>The option 'scan code' on the 'post publication' page {0} opens a plugin that scans the code. You will get a prefilled publication form with all the available meta-data of the book.</p><p>{0} can also add a QR-Code to a white spot on the first page of your uploaded documents. If you print the document with this QR-code, you can scan the QR-code to later cite this paper.</p> 
+didyouknow.scanningQr      = <p>Your webcam can scan the barcodes on your books!</p><p>The option "scan code" on the "post publication" page opens a plugin that scans the code. You will get a prefilled publication form with all the available meta-data of the book.</p><p>{0} can also add a QR-Code to a white spot on the first page of your uploaded documents. If you print the document with this QR-code, you can scan the QR-code to later cite this paper.</p>
 
 disambiguation.addPersonButton                      = Add person
 disambiguation.close                                = Close
@@ -564,6 +564,7 @@ error.captcha                                = Could not validate captcha due to
 error.concept_page_without_conceptname       = Sorry, this page does not exist on our server. I your want to access a concept page, please specify a concept name like /concept/tag/CONCEPT or /concept/user/USERNAME/CONCEPTNAME
 error.cookies_required                       = Please enable cookies in your browser.
 error.cv.missing_user_group                  = User/Group is missing.
+error.disambiguation.without_index			 =
 error.document_invalid_symbols               = Filename must not contain &lt;,/,\\ or &gt;
 error.document_not_converted                 = Sorry, the QR-Code could not be embedded into the requested document.
 error.document_not_found                     = Sorry, the requested document could not be found.
@@ -812,7 +813,7 @@ friendoverview.friends.description        = You have added the following users a
 friendoverview.friends.empty              = You have not yet added any user to your friend list.
 friendoverview.friends.post.description   = You are sharing the following resources with your friends:
 friendoverview.friends.title              = your friends
-friendoverview.hint.addmore               = To add friends, you can click the button 'add to your friend list' on the sidebar of a user's user page.
+friendoverview.hint.addmore               = To add friends, you can click the button "add to your friend list" on the sidebar of a user's user page.
 friendoverview.offriend.usershared        = Show only shared resources from this user
 friendoverview.offriends.description      = You are a friend of the following users:
 friendoverview.offriends.post.description = The following resources are shared with you:
@@ -864,6 +865,7 @@ goldStandard.resource.info.pdfps        = documents attached to this post
 goldStandard.resource.info.referencedBy = publications that reference this post
 goldStandard.resource.info.references   = publications referenced by this post
 goldStandard.users                      = users having this post in their collection
+goldStandard.users.viewInCollection     = View post in the user's collection
 
 goldstandard.resource.info.noAbstract = No abstract has been added to this post.
 goldstandard.resource.info.noLinks    = No links have been added to this post.
@@ -1503,7 +1505,7 @@ post.meta.changedOn                                     = changed on
 post.meta.copy_this_post                                = Copy this post.
 post.meta.display                                       = display
 post.meta.documents                                     = Here you see all of your publication posts which have a document attached.
-post.meta.duplicates                                    = All of your publication posts which you have at least twice
+post.meta.duplicates                                    = All of your publication posts that are stored in your collection at least twice.
 post.meta.edit                                          = edit
 post.meta.edit.title                                    = edit the details of all your posts from this list
 post.meta.filter                                        = filter
@@ -1828,7 +1830,7 @@ post_bibtex.pub_snippet.snippet                      = BibTeX/EndNote snippet
 post_bibtex.pub_snippet.title                        = BibTeX/EndNote snippet
 post_bibtex.scan.info                                = Using your webcam, you can scan the barcode on your books to add a new publication. You will get a prefilled publication form with all the available meta-data of the book. 
 post_bibtex.scan.title                               = scan code
-post_bibtex.upload.description                       = Here you can upload your existing BibTeX or EndNote file. Be sure to select the correct character encoding. If the file contains just a few entries you can tag them on the next page.
+post_bibtex.upload.description                       = Here you can upload an existing BibTeX or EndNote file. Be sure to select the correct character encoding. If the file contains just a few entries you can edit them on the next page.
 post_bibtex.upload.heading                           = Upload your BibTeX or EndNote file here:
 post_bibtex.upload.my_file                           = your file
 post_bibtex.upload.option.character_encoding         = character encoding
