--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -564,7 +564,7 @@ error.captcha                                = Could not validate captcha due to
 error.concept_page_without_conceptname       = Sorry, this page does not exist on our server. I your want to access a concept page, please specify a concept name like /concept/tag/CONCEPT or /concept/user/USERNAME/CONCEPTNAME
 error.cookies_required                       = Please enable cookies in your browser.
 error.cv.missing_user_group                  = User/Group is missing.
-error.disambiguation.without_index			 =
+error.disambiguation.without_index           = 
 error.document_invalid_symbols               = Filename must not contain &lt;,/,\\ or &gt;
 error.document_not_converted                 = Sorry, the QR-Code could not be embedded into the requested document.
 error.document_not_found                     = Sorry, the requested document could not be found.
@@ -927,6 +927,8 @@ groups.role.user                      = user
 help = Help
 
 help.link.tag.similarRelated = /help_en/Tags
+help.search.noresults        = No results were found.
+help.search.title            = Search Results
 
 hide = hide
 
