--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -562,7 +562,7 @@ error.captcha                                = Die \u00DCberpr\u00FCfung des Cap
 error.concept_page_without_conceptname       = Diese Seite existiert leider nicht auf unserem Server. Um auf eine Konzept-Seite zuzugreifen, verwenden Sie bitte das URL-Schema /concept/tag/CONCEPT oder /concept/user/USERNAME/CONCEPTNAME
 error.cookies_required                       = Bitte aktivieren Sie Cookies in Ihrem Webbrowser.
 error.cv.missing_user_group                  = Benutzer-/Gruppenangabe fehlt.
-error.disambiguation.without_index			 = 
+error.disambiguation.without_index           = 
 error.document_invalid_symbols               = Der Dateiname darf keines der folgenden Zeichen enthalten &lt;,/,\\ oder &gt;
 error.document_not_converted                 = Der QR-Code konnte nicht in das angefordete Dokument eingebettet werden.
 error.document_not_found                     = Das angefragte Dokument konnte leider nicht gefunden werden.
@@ -924,6 +924,8 @@ groups.role.user                      = Nutzer
 help = Hilfe
 
 help.link.tag.similarRelated = /help_de/Tags
+help.search.noresults        = Keine Ergebnisse gefunden.
+help.search.title            = Suchergebnisse
 
 hide = verbergen
 
