--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -528,7 +528,7 @@ error.captcha                                = \u041D\u0435 \u0443\u0434\u0430\u
 error.concept_page_without_conceptname       = \u0418\u0437\u0432\u0438\u043D\u0438\u0442\u0435, \u043D\u0430 \u043D\u0430\u0448\u0435\u043C \u0441\u0435\u0440\u0432\u0435\u0440\u0435 \u044D\u0442\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442. \u0415\u0441\u043B\u0438 \u0412\u044B \u0445\u043E\u0442\u0438\u0442\u0435 \u043F\u0435\u0440\u0435\u0439\u0442\u0438 \u043D\u0430 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0443, \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0449\u0443\u044E \u043A\u043E\u043D\u0446\u0435\u043F\u0442\u044B, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0443\u043A\u0430\u0436\u0438\u0442\u0435 \u0432 \u0441\u0442\u0440\u043E\u043A\u0435 URL-\u0430\u0434\u0440\u0435\u0441\u0430 /concept/tag/CONCEPT \u0438\u043B\u0438 /concept/user/USERNAME/CONCEPTNAME
 error.cookies_required                       = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0430\u043A\u0442\u0438\u0432\u0438\u0440\u0443\u0439\u0442\u0435 cookies  \u0432 \u0412\u0430\u0448\u0435\u043C \u0431\u0440\u0430\u0443\u0437\u0435\u0440\u0435.
 error.cv.missing_user_group                  = \u041E\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442 \u043F\u043E\u043B\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C, \u0438\u043B\u0438 \u0433\u0440\u0443\u043F\u043F\u0430.
-error.disambiguation.without_index			 =
+error.disambiguation.without_index           = 
 error.document_invalid_symbols               = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0444\u0430\u0439\u043B\u0430 \u043D\u0435 \u0434\u043E\u043B\u0436\u043D\u043E \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0438\u0445 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432: &lt;,/,\\ oder &gt;
 error.document_not_converted                 = QR-\u043A\u043E\u0434 \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u0432\u0441\u0442\u0440\u043E\u0435\u043D \u0432 \u0437\u0430\u043F\u0440\u0430\u0448\u0438\u0432\u0430\u0435\u043C\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442.
 error.document_not_found                     = \u0418\u0437\u0432\u0438\u043D\u0438\u0442\u0435, \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043D\u0435 \u0431\u044B\u043B \u043D\u0430\u0439\u0434\u0435\u043D.
@@ -879,6 +879,8 @@ groups.role.user                      = \u043F\u043E\u043B\u044C\u0437\u043E\u04
 help = \u041F\u043E\u043C\u043E\u0449\u044C
 
 help.link.tag.similarRelated = /help_en/Navigation%2Bvia%2Btags
+help.search.noresults        = 
+help.search.title            = 
 
 hide = \u043F\u0435\u0440\u0435\u0439\u0442\u0438 \u0432 \u043D\u0435\u0432\u0438\u0434\u0438\u043C\u044B\u0439 \u0440\u0435\u0436\u0438\u043C
 
