edit buttons for missing values

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -310,6 +310,7 @@ close = Schlie\u00DFen
 community = Community
 
 community.bookmark.edit      = Bearbeiten Sie Ihr Lesezeichen.
+community.edit.field         = {0} hinzuf\u00FCgen
 community.generalinformation = Allgemeine Informationen
 community.page               = Community Seite
 community.warning.edit       = Wenn Sie die Publikation in Ihrer Sammlung bearbeiten wollen, folgen Sie <a href="{0}">diesem Link</a>.
