--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -311,6 +311,7 @@ close = close
 community = community
 
 community.bookmark.edit      = Edit your bookmark.
+community.edit.field         = Add {0}
 community.generalinformation = General Information
 community.page               = Community Page
 community.warning.edit       = If you want to view or edit the publication in your collection, follow <a href="{0}">this link</a>.
