added subgroup goldstandard publication to new community page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1862,14 +1862,15 @@ privacy = privacy
 
 publications = publications
 
-publications.abstract.headline   = Abstract
-publications.citations.headline  = Cite this publication
-publications.discussion.headline = Comments and Reviews
-publications.related.citing      = Citing Publications
-publications.related.empty       = no publications found
-publications.related.headline    = Related Publications
-publications.related.referenced  = Referenced Publications
-publications.resource.headline   = Links and resources
+publications.abstract.headline    = Abstract
+publications.citations.headline   = Cite this publication
+publications.discussion.headline  = Comments and Reviews
+publications.related.citing       = Citing Publications
+publications.related.empty        = no publications found
+publications.related.headline     = Related Publications
+publications.related.incollection = Publications
+publications.related.referenced   = Referenced Publications
+publications.resource.headline    = Links and resources
 
 qrcode.actions.download                       = without a QR Code
 qrcode.actions.qrDownload                     = Download PDF with embedded QR code
