--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1849,14 +1849,15 @@ privacy = Privacy
 
 publications = Publikationen
 
-publications.abstract.headline   = Zusammenfassung
-publications.citations.headline  = Zitieren Sie diese Publikation
-publications.discussion.headline = Kommentare und Rezensionen
-publications.related.citing      = Zitierende Publikationen
-publications.related.empty       = keine Publikationen gefunden
-publications.related.headline    = Verwandte Publikationen
-publications.related.referenced  = Referenzierte Publikationen
-publications.resource.headline   = Links und Ressourcen
+publications.abstract.headline    = Zusammenfassung
+publications.citations.headline   = Zitieren Sie diese Publikation
+publications.discussion.headline  = Kommentare und Rezensionen
+publications.related.citing       = Zitierende Publikationen
+publications.related.empty        = keine Publikationen gefunden
+publications.related.headline     = Verwandte Publikationen
+publications.related.incollection = Ver\u00F6ffentlichungen
+publications.related.referenced   = Referenzierte Publikationen
+publications.resource.headline    = Links und Ressourcen
 
 qrcode.actions.download                       = ohne QR-Code
 qrcode.actions.qrDownload                     = Download PDF mit eingebettetem QR-Code
