fixing rss requests for /popular

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2393,6 +2393,7 @@ system.bib3.switch.endoflife             = Please note that the old layout you a
 system.bib3.switch.now                   = Switch to {0} now!
 system.contact                           = Contact:
 system.desc                              = The blue social bookmark and publication sharing system.
+system.error.unsupportedmediatype        = The requested format is not supported.
 system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found on the <a href="http://www.bibsonomy.org/help_en/GroupFunctions">groups help page</a> and in the blog post <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = This page shows you the latest updates of {0}.
 system.loginRegister                     = sign in/register
