--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2382,6 +2382,7 @@ system.bib3.switch.endoflife             = Bitte beachten Sie, dass die alte Ben
 system.bib3.switch.now                   = Wechseln Sie jetzt zu {0}!
 system.contact                           = Kontakt:
 system.desc                              = Lesezeichen und Publikationen teilen - in blau!
+system.error.unsupportedmediatype        = Das angefragte Format wird nicht unterst\u00FCtzt.
 system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie auf der <a href="http://www.bibsonomy.org/help_de/Gruppenfunktionen">Gruppen-Hilfeseite</a> und in unserem Blog (auf Englisch) unter <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = Hier sind die letzten Beitr\u00E4ge zu {0} aufgelistet. 
 system.loginRegister                     = Anmelden/Registrieren
