added missing message for saml login

--- a/bibsonomy-webapp/src/main/resources/themes/puma_messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/themes/puma_messages_de.properties
@@ -1,4 +1,7 @@
 
+auth.internal.help = Melden Sie sich als Gruppe an.
+auth.saml.help     = Melden Sie sich hier mit Ihrem Bibliotheksdaten an.
+
 button.collect.description  = Sammeln Sie auf Webseiten, durch eine komfortable unterst\u00FCtzende Eingabe oder \u00FCber Importm\u00F6glichkeiten Publikationen und Lesezeichen 
 button.description          = F\u00FChren Sie den Mauszeiger \u00FCber eines der Piktogramme. 
 button.organize.description = Nutzen Sie einfache Stichw\u00F6rter, um Ihre Eintr\u00E4ge jederzeit leicht zu finden. Generieren Sie Literaturlisten f\u00FCr Ihre Homepage oder Ihre eigenen Publikationen
