--- a/bibsonomy-webapp/src/main/resources/themes/puma_messages_en.properties
+++ b/bibsonomy-webapp/src/main/resources/themes/puma_messages_en.properties
@@ -1,4 +1,7 @@
 
+auth.internal.help = Login as group.
+auth.saml.help     = Sign-in with your library account.
+
 button.collect.description  = Collect publications and bookmarks either from web pages, with easy, convenient, and supporting input methods or with different import possibilities  
 button.description          = Move your mouse pointer over an image 
 button.organize.description = Use simple tags to search and find your posts. Generate publication lists, for presentation on your personal home page or for citing them in your own work, fast and easily .
