fixed link to german help page

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1504,7 +1504,7 @@ post.meta.edit.title                                    = Alle eigenen Eintr\u00
 post.meta.filter                                        = Filtern
 post.meta.flag_as_spam                                  = Spam
 post.meta.flag_as_spam.title                            = Diesen Eintrag als Spam markieren
-post.meta.helplink                                      = /help_de/Sorting%20Publications
+post.meta.helplink                                      = /help_de/PublikationenSortieren
 post.meta.kill_spammer                                  = KillSpammer!
 post.meta.others                                        = Sonstiges
 post.meta.own_post                                      = Sie besitzen dieses Eintrag bereits.
