separated gear menu
fixes #2405

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1533,7 +1533,7 @@ post.meta.save_as_publication                           = Post as publication
 post.meta.show_bookmarks_only                           = bookmarks only
 post.meta.show_publications_only                        = publications only
 post.meta.sort                                          = sort
-post.meta.sort.criterion                                = criterion
+post.meta.sort.criterion                                = sort by
 post.meta.sort.order                                    = order
 post.meta.sort.order.ascending                          = ascending
 post.meta.sort.order.descending                         = descending
