--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1522,7 +1522,7 @@ post.meta.save_as_publication                           = Als Publikation speich
 post.meta.show_bookmarks_only                           = nur Lesezeichen
 post.meta.show_publications_only                        = nur Publikationen
 post.meta.sort                                          = Sortierung
-post.meta.sort.criterion                                = Kriterium
+post.meta.sort.criterion                                = sortieren nach
 post.meta.sort.order                                    = Reihenfolge
 post.meta.sort.order.ascending                          = aufsteigend
 post.meta.sort.order.descending                         = absteigend
