--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1359,7 +1359,7 @@ post.meta.save_as_publication                           = \u0421\u043E\u0445\u04
 post.meta.show_bookmarks_only                           = \u0442\u043E\u043B\u044C\u043A\u043E \u0437\u0430\u043A\u043B\u0430\u0434\u043A\u0438
 post.meta.show_publications_only                        = \u0442\u043E\u043B\u044C\u043A\u043E \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438
 post.meta.sort                                          = \u0441\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u043A\u0430
-post.meta.sort.criterion                                = \u043A\u0440\u0438\u0442\u0435\u0440\u0438\u0439
+post.meta.sort.criterion                                = 
 post.meta.sort.order                                    = \u043F\u043E\u0440\u044F\u0434\u043E\u043A
 post.meta.sort.order.ascending                          = \u043F\u043E \u0432\u043E\u0437\u0440\u0430\u0441\u0442\u0430\u043D\u0438\u044E
 post.meta.sort.order.descending                         = \u043F\u043E \u0443\u0431\u044B\u0432\u0430\u043D\u0438\u044E
