cleaned up followers page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -761,7 +761,7 @@ follow = follow
 
 follow.actions.delete.title                 = stop following {0}
 follow.addFollower                          = Follow somebody
-follow.followerof                           = You're followed by:
+follow.followerof                           = You're followed by
 follow.following                            = following
 # follow Seite
 follow.info.text1                           = You're not following this user: 
@@ -771,6 +771,7 @@ follow.link.text.followLong                 = Follow this user
 follow.link.text.remove                     = remove
 follow.link.text.removeLong                 = Stop following this user
 follow.offollower                           = You're following:
+follow.whotofollow                          = Who to follow
 
 followersPage.about                         = When you "follow" users, you can keep track of all their interesting posts. <a href="{0}">Learn more...</a>
 followersPage.all.mostRecent.contentHeading = This page shows you the {0} most recent posts which might be interesting for you ({1}).
