--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -758,7 +758,7 @@ follow = folgen
 
 follow.actions.delete.title                 = {0} nicht mehr folgen
 follow.addFollower                          = Jemandem folgen:
-follow.followerof                           = Benutzer, die Ihnen folgen:
+follow.followerof                           = Benutzer, die Ihnen folgen
 follow.following                            = folgend
 # follow Seite
 follow.info.text1                           = Sie folgen dem Benutzer nicht: 
@@ -768,6 +768,7 @@ follow.link.text.followLong                 = Diesem Benutzer folgen
 follow.link.text.remove                     = entfernen
 follow.link.text.removeLong                 = Diesem Benutzer nicht mehr folgen
 follow.offollower                           = Sie folgen:
+follow.whotofollow                          = Wem folgen?
 
 followersPage.about                         = Wenn Sie einem Benutzer "folgen", k\u00F6nnen Sie die \u00DCbersicht \u00FCber all seine interessanten Eintr\u00E4ge behalten. <a href="{0}">Mehr...</a>
 followersPage.all.mostRecent.contentHeading = Auf dieser Seite sehen Sie die letzten {0} Eintr\u00E4ge, die Sie interessieren k\u00F6nnten ({1}).
