highlighted own tags on community page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -314,6 +314,7 @@ community.bookmark.edit      = Edit your bookmark.
 community.edit.field         = Add {0}
 community.generalinformation = General Information
 community.page               = Community Page
+community.tags.myown         = Own tags highlighted.
 community.warning.edit       = If you want to view or edit the publication in your collection, follow <a href="{0}">this link</a>.
 community.warning.view       = You are currently viewing the community post.
 
