--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -313,6 +313,7 @@ community.bookmark.edit      = Bearbeiten Sie Ihr Lesezeichen.
 community.edit.field         = {0} hinzuf\u00FCgen
 community.generalinformation = Allgemeine Informationen
 community.page               = Community Seite
+community.tags.myown         = Eigene Tags hervorgehoben.
 community.warning.edit       = Wenn Sie die Publikation in Ihrer Sammlung bearbeiten wollen, folgen Sie <a href="{0}">diesem Link</a>.
 community.warning.view       = Sie betrachten hier den Gemeinschaftseintrag.
 
