--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -291,6 +291,7 @@ community = \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u043E
 
 community.edit.field = 
 community.page       = \u0421\u0442\u0440\u0430\u043D\u0438\u0446\u0430 \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u0430
+community.tags.myown = 
 
 concept.sidebar.title       = \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440
 concept.title_with_count    = \u043A\u043E\u043D\u0446\u0435\u043F\u0446\u0438\u0438 {0} ({1})
