--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2275,6 +2275,7 @@ settings.tag.threshold.help                                 = According to your 
 settings.tag.threshold.help.maxCount                        = how many tags are displayed in a tagcloud ({0}) or
 settings.tag.threshold.help.minFreq                         = the minimum frequency for each tag ({0})
 settings.updatesettings                                     = update settings
+settings.user.profile.update.success                        = Updated profile successfully.
 settings.username.help.delicious                            = your Delicious username
 settings.yes                                                = yes
 settings.yestodeleteaccount                                 = (type {0} to delete your account)
