--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -2036,6 +2036,7 @@ settings.tag.threshold.help                                 = \u0412 \u0437\u043
 settings.tag.threshold.help.maxCount                        = \u043A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0435\u043C\u044B\u0445 \u0442\u044D\u0433\u043E\u0432 \u0432 \u043E\u0431\u043B\u0430\u043A\u0435 ({0}) \u0438\u043B\u0438 
 settings.tag.threshold.help.minFreq                         = \u043C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u0443\u044E \u0447\u0430\u0441\u0442\u043E\u0442\u0443 \u043F\u043E\u044F\u0432\u043B\u0435\u043D\u0438\u044F \u0442\u044D\u0433\u0430 ({0})
 settings.updatesettings                                     = \u043E\u0431\u043D\u043E\u0432\u0438\u0442\u044C \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
+settings.user.profile.update.success                        = 
 settings.username.help.delicious                            = \u0412\u0430\u0448\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0432 Delicious
 settings.yes                                                = \u0434\u0430
 settings.yestodeleteaccount                                 = (\u0432\u0432\u0435\u0434\u0438\u0442\u0435 {0}, \u0447\u0442\u043E\u0431\u044B \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0412\u0430\u0448\u0443 \u0443\u0447\u0435\u0442\u043D\u0443\u044E \u0437\u0430\u043F\u0438\u0441\u044C)
