redesign postPublication and postBookmark moved publication import to separate page
fixes #1244, #2636, #1718

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1242,10 +1242,10 @@ navi.password.ldap               = pin code
 navi.pdfs                        = documents
 navi.persons                     = genealogy
 navi.popular                     = popular
-navi.postBookmark                = post bookmark
+navi.postBookmark                = Add bookmark
 navi.postBookmarkPopup           = post bookmark (popup)
 navi.postPost                    = add post
-navi.postPublication             = post publication
+navi.postPublication             = Add publication
 navi.postPublicationPopup        = post publication (popup)
 navi.posts                       = posts
 navi.postsOfFriends              = posts of friends
@@ -1831,7 +1831,7 @@ post_bibtex.doi_isbn.isbn                            = ISBN
 post_bibtex.doi_isbn.issn                            = ISSN
 post_bibtex.doi_isbn.title                           = ISBN/DOI
 post_bibtex.heading                                  = post publication
-post_bibtex.manual.description                       = Please enter title, year and author/editor into this form to check whether you have already bookmarked this publication. On the next page you can enter the remaining publication metadata fields.
+post_bibtex.manual.description                       = Please enter title, year and author/editor into this form. On the next page you can enter the remaining publication metadata fields.
 post_bibtex.manual.heading                           = Enter your publication data here:
 post_bibtex.manual.title                             = manual
 post_bibtex.pub_snippet.description                  = Just copy and paste any valid BibTeX snippet or publication reference into this box and enter a description. If your snippet contains only one reference you can edit it on the next page.
@@ -1850,11 +1850,23 @@ post_bibtex.upload.option.tag_delimiter              = tag delimiter
 post_bibtex.upload.option.tag_delimiter_help         = If your literature references contain a field <em>tags</em> (or <em>keywords</em>) you can specify the appropriate seperator (comma, colon, semicolon, ...) for these tags. The default is whitespace (space or tab). 
 post_bibtex.upload.option.whitespace_substitute      = whitespace substitute
 post_bibtex.upload.option.whitespace_substitute_help = If your tags are not delimited by whitespace, enter here a symbol to substitute whitespace. 
-post_bibtex.upload.options                           = options
+post_bibtex.upload.options                           = advanced options
 post_bibtex.upload.title                             = upload file
 
-post_bookmark.description = Please enter the URL of your bookmark into this form to check, whether it already exists in your collection. On the next page you can enter the remaining bookmark metadata fields.
-post_bookmark.heading     = Enter your bookmark data here
+post_bookmark.addons.desc  = You can install our Add-on/Bookmarklet to easily add bookmarks while browsing the Web.
+post_bookmark.addons.title = OR: use our addon/bookmarklet to post bookmarks
+post_bookmark.description  = Please enter the URL of your bookmark into this form to check, whether it already exists in your collection. On the next page you can enter the remaining bookmark metadata fields.
+post_bookmark.heading      = Enter your bookmark data here
+
+post_publication.addons.desc        = You can install our Add-On or bookmarklet to post publications while browsing the web. The system can automatically extract meta information from various publishers and systems (<a href="/scraperinfo">full list of supported sites</a>).
+post_publication.addons.title       = OR: use our addon/bookmarklet to post publications while browsing the Web
+post_publication.file.desc          = Upload the fulltext of the publication. We try to extract the meta information of the publication.
+post_publication.file.title         = upload document
+post_publication.other.methods      = OR: use one of the following methods
+post_publication.search.info        = If you want to import multiple publications, please use our <a href="/import/publications">import page</a>.
+post_publication.search.loading     = searching for publications \u2026
+post_publication.search.notfound    = No match found. Please click here to post the publication manually.
+post_publication.search.placeholder = Search publication by title, ISBN, ISSN or DOI
 
 posts = posts
 
@@ -1867,6 +1879,8 @@ preview = preview
 previous = &lang;
 
 privacy = privacy
+
+publication.import.title          = Import publications
 
 publications = publications
 
@@ -2402,6 +2416,8 @@ system.bib3.switch.now                   = Switch to {0} now!
 system.contact                           = Contact:
 system.desc                              = The blue social bookmark and publication sharing system.
 system.error.unsupportedmediatype        = The requested format is not supported.
+system.feature.beta                      = Beta
+system.feature.beta.info                 = This feature is still in beta.
 system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found on the <a href="http://www.bibsonomy.org/help_en/GroupFunctions">groups help page</a> and in the blog post <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = This page shows you the latest updates of {0}.
 system.loginRegister                     = sign in/register
