--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1232,10 +1232,10 @@ navi.password.ldap               = PIN-Code
 navi.pdfs                        = Dokumente
 navi.persons                     = Genealogie
 navi.popular                     = Beliebt
-navi.postBookmark                = Lesezeichen eintragen
+navi.postBookmark                = Lesezeichen hinzuf\u00FCgen
 navi.postBookmarkPopup           = Lesezeichen eintragen (popup)
 navi.postPost                    = Eintragen
-navi.postPublication             = Publikation eintragen
+navi.postPublication             = Publikation hinzuf\u00FCgen
 navi.postPublicationPopup        = Publikation eintragen (popup)
 navi.posts                       = Eintr\u00E4ge
 navi.postsOfFriends              = Eintr\u00E4ge von Freunden
@@ -1815,7 +1815,7 @@ post_bibtex.doi_isbn.isbn                            = ISBN
 post_bibtex.doi_isbn.issn                            = ISSN
 post_bibtex.doi_isbn.title                           = ISBN/DOI
 post_bibtex.heading                                  = Publikation eintragen
-post_bibtex.manual.description                       = Bitte tragen Sie Titel, Jahr und Autor im Formular auf dieser Seite ein, um zu testen, ob Sie diese Publikation schon besitzen. Auf der n\u00E4chsten Seite k\u00F6nnen Sie die fehlenden Metadaten der Publikation eintragen.
+post_bibtex.manual.description                       = Bitte tragen Sie Titel, Jahr und Autor im Formular auf dieser Seite ein. Auf der n\u00E4chsten Seite k\u00F6nnen Sie die fehlenden Metadaten der Publikation eintragen.
 post_bibtex.manual.heading                           = Tragen Sie Ihre Publikation hier ein:
 post_bibtex.manual.title                             = Per Hand
 post_bibtex.pub_snippet.description                  = Kopieren Sie den BibTeX-Schnipsel und f\u00FCgen Sie ihn einfach in die Box im Formular ein. Zus\u00E4tzlich k\u00F6nnen Sie noch eine Beschreibung angeben. Sofern der von Ihnen kopierte Text nur eine Referenz enth\u00E4lt, k\u00F6nnen Sie diese auf der n\u00E4chsten Seite bearbeiten und anpassen.
@@ -1834,11 +1834,24 @@ post_bibtex.upload.option.tag_delimiter              = Trennzeichen f\u00FCr Tag
 post_bibtex.upload.option.tag_delimiter_help         = Falls Ihre Literatur-Referenzen ein Feld <em>tags</em> (oder <em>keywords</em>) enthalten, k\u00F6nnen Sie hier spezifizieren, welches Zeichen diese Tags voneinander trennt (Komma, Semikolon, ...). Der standardm\u00E4\u00DFig eingestellte Trenner ist Leerzeichen bzw. Tabulator.
 post_bibtex.upload.option.whitespace_substitute      = Leerzeichen-Ersetzung
 post_bibtex.upload.option.whitespace_substitute_help = Falls Ihre Tags nicht durch Leerzeichen getrennt werden, geben Sie hier ein Zeichen zur Ersetzung der Leerzeichen an.
-post_bibtex.upload.options                           = Einstellungen
+post_bibtex.upload.options                           = Erweiterte Einstellungen
 post_bibtex.upload.title                             = Datei hochladen
 
-post_bookmark.description = Bitte tragen Sie die URL ihres Lesezeichens ein, um zu testen, ob Sie dieses schon in Ihrer Sammlung haben. Auf der n\u00E4chsten Seite k\u00F6nnen Sie die Metadaten des Lesezeichens eintragen.
-post_bookmark.heading     = Tragen Sie Ihr Lesezeichen hier ein
+post_bookmark.addons.desc  = Sie k\u00F6nnen unser Add-On/Bookmarklet installieren, um ohne Umwege Lesezeichen w\u00E4hrend dem Browsen im Web zu speichern.
+post_bookmark.addons.title = ODER: Verwenden Sie unser Addon/Bookmarklet um Lesezeichen einzutragen
+post_bookmark.description  = Bitte tragen Sie die URL ihres Lesezeichens ein, um zu testen, ob Sie dieses schon in Ihrer Sammlung haben. Auf der n\u00E4chsten Seite k\u00F6nnen Sie die Metadaten des Lesezeichens eintragen.
+post_bookmark.heading      = Tragen Sie Ihr Lesezeichen hier ein
+
+post_publication.addons.desc        = Sie k\u00F6nnen unser Add-On oder Bookmarklet installieren, um beim Durchsuchen des Webs Publikationen einzutragen. Das System kann automatisch Metainformationen von verschiedenen Verlegern und System extrahieren (<a href="/scraperinfo">vollst\u00E4ndige Liste der unterst\u00FCtzten Seiten</a>).
+post_publication.addons.title       = ODER: Verwenden Sie unser Addon/Bookmarklet um Publikationen w\u00E4hrend Sie das Web durchsuchen einzutragen
+post_publication.file.desc          = Laden Sie den Volltext der Publikation hoch. Wir versuchen die Metainformationen der Publikation zu extrahieren.
+post_publication.file.title         = Dokument hochladen
+post_publication.other.methods      = ODER: Verwenden Sie eine der folgenden M\u00F6glichkeiten
+post_publication.search             = Suche nach Publikationen
+post_publication.search.info        = Wenn Sie mehrere Publikationen importieren wollen, verwenden Sie bitte unsere <a href="/import/publications">Import Seite</a>.
+post_publication.search.loading     = Suche nach Publikationen \u2026
+post_publication.search.notfound    = Leider konnten wir keine Publikationen finden. Klicken Sie hier um eine Publikation manuell einzutragen.
+post_publication.search.placeholder = Publikation mittels Titel, ISBN, ISSN oder DOI suchen
 
 posts = Eintr\u00E4ge
 
@@ -1851,6 +1864,8 @@ preview = Vorschau
 previous = &lang;
 
 privacy = Privacy
+
+publication.import.title          = Publikationen importieren
 
 publications = Publikationen
 
@@ -2388,6 +2403,8 @@ system.bib3.switch.now                   = Wechseln Sie jetzt zu {0}!
 system.contact                           = Kontakt:
 system.desc                              = Lesezeichen und Publikationen teilen - in blau!
 system.error.unsupportedmediatype        = Das angefragte Format wird nicht unterst\u00FCtzt.
+system.feature.beta                      = Beta
+system.feature.beta.info                 = Diese Funktion ist noch im Beta-Statium.
 system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie auf der <a href="http://www.bibsonomy.org/help_de/Gruppenfunktionen">Gruppen-Hilfeseite</a> und in unserem Blog (auf Englisch) unter <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = Hier sind die letzten Beitr\u00E4ge zu {0} aufgelistet. 
 system.loginRegister                     = Anmelden/Registrieren
