--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1845,6 +1845,7 @@ post_bookmark.heading      = Tragen Sie Ihr Lesezeichen hier ein
 post_publication.addons.desc        = Sie k\u00F6nnen unser Add-On oder Bookmarklet installieren, um beim Durchsuchen des Webs Publikationen einzutragen. Das System kann automatisch Metainformationen von verschiedenen Verlegern und System extrahieren (<a href="/scraperinfo">vollst\u00E4ndige Liste der unterst\u00FCtzten Seiten</a>).
 post_publication.addons.title       = ODER: Verwenden Sie unser Addon/Bookmarklet um Publikationen w\u00E4hrend Sie das Web durchsuchen einzutragen
 post_publication.file.desc          = Laden Sie den Volltext der Publikation hoch. Wir versuchen die Metainformationen der Publikation zu extrahieren.
+post_publication.file.noinfo        = Wir konnten leider keine Metainformationen extrahieren, aber das hochgeladene Dokument wurde diesem Eintrag angeh\u00E4ngt. Bitte geben Sie die Metainformationen per Hand ein.
 post_publication.file.title         = Dokument hochladen
 post_publication.other.methods      = ODER: Verwenden Sie eine der folgenden M\u00F6glichkeiten
 post_publication.search             = Suche nach Publikationen
