redirect to settings page after editing user layout settings
fixes #2606

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2290,7 +2290,8 @@ settings.tag.threshold.help                                 = According to your 
 settings.tag.threshold.help.maxCount                        = how many tags are displayed in a tagcloud ({0}) or
 settings.tag.threshold.help.minFreq                         = the minimum frequency for each tag ({0})
 settings.updatesettings                                     = update settings
-settings.user.profile.update.success                        = Updated profile successfully.
+settings.user.profile.update.success                        = Successfully updated profile.
+settings.user.settings.update.success                       = Successfully updated settings.
 settings.username.help.delicious                            = your Delicious username
 settings.yes                                                = yes
 settings.yestodeleteaccount                                 = (type {0} to delete your account)
