--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2278,6 +2278,7 @@ settings.tag.threshold.help.maxCount                        = die Anzahl der dar
 settings.tag.threshold.help.minFreq                         = die Mindesth\u00E4ufigkeit eines Tags ({0}).
 settings.updatesettings                                     = Einstellungen aktualisieren
 settings.user.profile.update.success                        = Profil erfolgreich ge\u00E4ndert.
+settings.user.settings.update.success                       = Einstellungen erfolgreich ge\u00E4ndert.
 settings.username.help.delicious                            = Ihr Benutzername bei Delicious
 settings.yes                                                = Ja
 settings.yestodeleteaccount                                 = (Geben Sie {0} ein, um Ihr Konto zu l\u00F6schen)
